# tribs-adapter

./: README.md  ms2_s1z1_notree.gltf.gltf  pyproject.toml  salas.gltf.gltf  test_environment.yml
.github/workflows/: ci.yml
design/tribs_data_model/smallbasin/: smallbasin.in  smallbasin.json
tests/: Dockerfile  conftest.py
tests/files/: README.md
tests/files/input_files/: salas.json  salas__tRIBSInput_to_input_file.in  salas_resource_paths.json  smallbasin.in  smallbasin.json  smallbasin__tRIBSInput_to_input_file.in  smallbasin_resource_paths.json
tests/intermediate_tests/: __init__.py  conftest.py  test_tribs.py
tests/intermediate_tests/test_common/: conftest.py  test_czml_converters.py  test_czml_generator.py
tests/intermediate_tests/test_resources/: conftest.py  realization_data.py  scenario_data.py  serialization_data.py  test_dataset.py  test_project.py  test_realization.py  test_relationships.py  test_scenario.py
tests/intermediate_tests/test_services/: conftest.py  test_tribs_spatial_manager.py
tests/intermediate_tests/test_workflows/: test_utilities.py
tests/unit_tests/: conftest.py  test_tribs.py
tests/unit_tests/test_io/: conftest.py  test_cli.py  test_input_file.py  test_tribs_mesh.py  test_util.py
tribs_adapter/: __init__.py
tribs_adapter/app_users/: __init__.py  app_user.py  organization.py  permissions.py
tribs_adapter/cli/: __init__.py  version_command.py
tribs_adapter/common/: czml_converters.py  czml_generator.py  dataset_types.py  file_to_dataset.py  soil_data_types.py
tribs_adapter/io/: __init__.py  input_file.py  options.py  renderer.py  tribs_mesh.py  util.py
tribs_adapter/job_scripts/tribs_resources/: create_visualization_executable.py
tribs_adapter/resources/: __init__.py  dataset.py  project.py  realization.py  scenario.py  tutorial.py
tribs_adapter/resources/mixins/: __init__.py  input_file_attr_mixin.py  link_mixin.py  project_child_mixin.py  srid_attr_mixin.py
tribs_adapter/services/: tribs_spatial_manager.py
tribs_adapter/services/upload/: __init__.py  upload_dataset_workflow.py  upload_resource_workflow.py
tribs_adapter/templates/: input_file.in.jinja
tribs_adapter/templates/sld_templates/: features_shapefile.sld  ndvi.sld  parallel_partition.sld  raster_continuous.sld  raster_rgb.sld  vegetation_types.sld
tribs_adapter/tribs/: README.md  __init__.py  tRIBS  tRIBSpar
tribs_adapter/workflow_steps/: __init__.py  ndvi_rws.py  vegetation_types_rws.py
tribs_adapter/workflows/: __init__.py  tribs_workflow.py  utilities.py
tribs_adapter/workflows/bulk_data_retrieval/: __init__.py  attributes.py  jobs.py
tribs_adapter/workflows/prepare_met_forcings/: __init__.py  attributes.py  jobs.py  nldas_dataset_options.py  nldas_timestep_options.py  results.py  tin_dataset_options.py
(+164 files in other folders)
